added mantisEntity can now harvest crops/blocks